[package]
name = "bug-free-giggle"
version = "0.1.0"
edition = "2024"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "bug-free-giggle"
test = false
bench = false

[dependencies]
